@@ -2,26 +2,33 @@ Changes
 etc/perldb
 inc/Module/AutoInstall.pm
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/AutoInstall.pm
 inc/Module/Install/Base.pm
+inc/Module/Install/Bugtracker.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/ExtraTests.pm
 inc/Module/Install/Fetch.pm
+inc/Module/Install/Homepage.pm
 inc/Module/Install/Include.pm
 inc/Module/Install/Makefile.pm
 inc/Module/Install/Metadata.pm
+inc/Module/Install/Repository.pm
 inc/Module/Install/Win32.pm
 inc/Module/Install/WriteAll.pm
 inc/Test/Differences.pm
 inc/Test/More.pm
+INSTALL
 lib/DB/Pluggable.pm
 lib/DB/Pluggable/BreakOnTestNumber.pm
 lib/DB/Pluggable/Constants.pm
+lib/DB/Pluggable/Plugin.pm
 LICENSE
 Makefile.PL
 MANIFEST			This list of files
 META.yml
 README
+README.mkdn
 t/01_misc.t
 xt/author/00_compile.t
 xt/author/01_perl_critic.t
